<resources>
    <string name="app_name">LoginPage</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="register_if_new">REGISTER IF NEW</string>
    <string name="welcome">WELCOME!</string>
    <string name="wl_email">Email:</string>
    <string name="wl_first_name">First Name:</string>
    <string name="wl_last_name">Last Name:</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="wl_gender">Gender:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="male_users">Male Users</string>
    <string name="female_users">Female Users</string>
    <string name="account">Account</string>
    <string name="first_name">First Name</string>
    <string name="tvv_email">Email</string>
    <string name="tvv_last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="cancel">btn_cancel</string>
</resources>