<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"/>

    <ImageView
        android:id="@+id/wl_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"/>


    <TextView
        android:id="@+id/wl_fName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wl_first_name"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wl_image"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/wl_lName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wl_last_name"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wl_fName"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/wl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wl_email"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wl_lName"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/wl_et_fName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/wl_fName"
        app:layout_constraintTop_toBottomOf="@+id/wl_image"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/wl_et_lName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/wl_lName"
        app:layout_constraintTop_toBottomOf="@+id/wl_et_fName"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="10dp"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/wl_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/wl_email"
        app:layout_constraintTop_toBottomOf="@+id/wl_et_lName"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="10dp"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/wl_btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wl_email"
        android:layout_marginTop="18dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>